# snaak_weight_read

./: CMakeLists.txt  package.xml
launch/: snaak_weight_read_launch.py
scripts/: snaak_weight_service_node.py  weight_service_node.py
srv/: ReadWeight.srv
